--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.26.14",
+    "fs": "0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-imagemin": "^7.1.0",
-    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-sftp": "^0.1.5",
-    "gulp.spritesmith": "^6.11.0",
-    "merge-stream": "^2.0.0"
-  }
+    "gulp-ssh": "^0.7.0",
+    "gulp.spritesmith": "^6.11.0"
+  },
+  "dependencies": {}
 }
